--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/admin_project_db
 spring.datasource.username=admin_user
 spring.datasource.password=Gfhjkm1
+
+server.port=8081
